# DotVast.HashTool.WinUI

./: .editorconfig  .gitignore  .vsconfig  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  DotVast.HashTool.WinUI.sln  LICENSE.txt  README.md  Settings.XamlStyler
.github/: pull_request_template.md
.github/workflows/: build.yml  (+2 more)
DotVast.HashTool.ContextMenu/: BaseCommand.cpp  BaseCommand.h  DotVast.HashTool.ContextMenu.vcxproj  DotVast.HashTool.ContextMenu.vcxproj.filters  EnumCommand.cpp  EnumCommand.h  HashCommand.cpp  HashCommand.h  dllmain.cpp  framework.h  packages.config
DotVast.HashTool.WinUI/: App.xaml  App.xaml.cs  Constants.cs  DotVast.HashTool.WinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.Dev.appxmanifest  Package.appinstaller  Package.appxmanifest  TemplateStudio.xml  Usings.cs  app.manifest  appsettings.json
DotVast.HashTool.WinUI.Core/: DotVast.HashTool.WinUI.Core.csproj
DotVast.Toolkit.StringResource.Attributes/: DotVast.Toolkit.StringResource.Attributes.csproj  StringResourceAttribute.cs
DotVast.Toolkit.StringResource.SourceGenerator/: DotVast.Toolkit.StringResource.SourceGenerator.csproj  ISymbolExtensions.cs  StringResourceGenerator.cs  StringResourceInfo.cs
docs/: README.zh-Hans.md
src/: .vsconfig  Directory.Build.props  DotVast.HashTool.Benchmark.sln  DotVast.HashTool.WinUI.sln  nuget.config
src/DotVast.HashTool.NativeCrypto/native_crypto/: Cargo.toml
src/DotVast.HashTool.NativeCrypto/native_crypto/src/: blake2.rs  blake3.rs  hasher.rs  lib.rs  md4.rs  md5.rs  ripemd.rs  sha1.rs  sha2.rs  sha3.rs  sm3.rs
(+425 files in other folders)
