[package]
name = "native_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[profile.release]
strip = true

[dependencies]
paste = "1.0"
digest = "0.10"
blake3 = { version = "1.3", features = ["traits-preview"] }
ripemd = "0.1"
sm3 = "0.4"
