[package]
name = "native_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[profile.release]
strip = true

[dependencies]
paste = "1.0"
digest = "0.10"
blake2 = { version = "0.10", optional = true }
blake3 = { version = "1.3", features = ["traits-preview"], optional = true }
md4 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
ripemd = { version = "0.1", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
sm3 = { version = "0.4", optional = true }

[features]
default = [
    "blake2",
    "blake3",
    "md4",
    "md5",
    "ripemd",
    "sha1",
    "sha2",
    "sha3",
    "sm3",
]
md5 = ["md-5"]
